Fix: correct vibration of elements due to vertical scrollbar

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,6 @@
 body {
-   background-color: #004466;   
+   background-color: #004466;  
+   overflow: hidden; 
 }
 
 .appContainer {
