--- a/src/styles/body.css
+++ b/src/styles/body.css
@@ -7,6 +7,7 @@
    align-items: center;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    margin-bottom: 25px;
+   overflow: hidden;
  }
 
 .inputSearch
